--- a/apps/analyzer/package.json
+++ b/apps/analyzer/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.0.4",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
