--- a/apps/matchbuilder/public/capsule-rules.yaml
+++ b/apps/matchbuilder/public/capsule-rules.yaml
@@ -8,6 +8,50 @@ rulesets:
       description: "Per-character cost limit: 12"
       author: "team"
       createdAt: "2025-10-04"
+    totalCost: 20
+    scope: per-character
+    mode: hard
+    restrictions:
+      - type: unique-per-character
+        params:
+          enabled: true
+      - type: banned-ids
+        params:
+          ids:
+            - "00_0_0151"
+            - "00_0_0152"
+            - "00_0_0111"
+            - "00_0_0131"
+            - "00_0_0123"
+
+  standard-soft:
+    metadata:
+      name: "Standard - Soft"
+      description: "Per-character cost limit: 12"
+      author: "team"
+      createdAt: "2025-10-04"
+    totalCost: 20
+    scope: per-character
+    mode: soft
+    restrictions:
+      - type: unique-per-character
+        params:
+          enabled: true
+      - type: banned-ids
+        params:
+          ids:
+            - "00_0_0151"
+            - "00_0_0152"
+            - "00_0_0111"
+            - "00_0_0131"
+            - "00_0_0123"
+
+  star system:
+    metadata:
+      name: "Star System"
+      description: "Per-character cost limit: 12"
+      author: "team"
+      createdAt: "2025-10-04"
     totalCost: 12
     scope: per-character
     mode: hard
@@ -19,10 +63,14 @@ rulesets:
         params:
           ids:
             - "00_0_0151"
+            - "00_0_0152"
+            - "00_0_0111"
+            - "00_0_0131"
+            - "00_0_0123"
 
-  standard-soft:
+  star system-soft:
     metadata:
-      name: "Standard - Soft"
+      name: "Star System-Soft"
       description: "Per-character cost limit: 12"
       author: "team"
       createdAt: "2025-10-04"
@@ -37,26 +85,7 @@ rulesets:
         params:
           ids:
             - "00_0_0151"
-
-  competitive:
-    metadata:
-      name: "Competitive"
-      description: "No duplicates across a team, per-team total cost <= 24. Soft warnings for character-level cost overages."
-      createdAt: "2025-10-04"
-    totalCost: 24
-    scope: per-team
-    mode: soft
-    restrictions:
-      - type: unique-per-team
-        params: { enabled: true }
-
-  beginner:
-    metadata:
-      name: "Beginner"
-      description: "Small allowance, helpful warnings"
-    totalCost: 12
-    scope: per-character
-    mode: soft
-    restrictions:
-      - type: unique-per-character
-        params: { enabled: false }
+            - "00_0_0152"
+            - "00_0_0111"
+            - "00_0_0131"
+            - "00_0_0123"
