--- a/apps/matchbuilder/package.json
+++ b/apps/matchbuilder/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir=../../dist/matchbuilder",
     "preview": "vite preview"
   }
 }
